Cambiando los estilos para un portfolio alternativo

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
     <!-- Acá empieza la cabecera -->
     <header>
         <!-- Acá empieza el nav -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fs-5">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fs-5 border-bottom">
             <div class="container-fluid">
                 <div class="column">
                     <div class="logo">
+                        <!-- <img class="imgReact rodar" src="./img/react-personalizado.svg" alt="imagen del símbolo de react"> -->
                         <span class="gear rodar">S</span>
                         <a href="#">Portfolio</a>
                         <span class="justBeNice desplazamiento">#</span>
@@ -68,8 +69,7 @@
                 <div class="row">
                     <div id="about" class="aboutMe">
                         <img src="./img/FotoPerfil.png" alt="Foto de mi perfil" class="fotoPerfil border shadow">
-                        <p class="parrafoPerfil fs-5">I am a maths teacher, studying to be a full stack web developer
-                        </p>
+                        <p class="parrafoPerfil fs-4">I am a maths teacher, studying to be a full stack web developer</p>
                     </div>
                 </div>
             </div>
@@ -126,10 +126,10 @@
                         </article>
 
                         <article id="proyectoseis" class="proyecto trans">
-                            <a href="#" target="_blank"><img src="./img/imagen-proyecto-coderhouse.jpg" alt="" class="img"></a>
+                            <a href="#" target="_blank"><img src="./img/img-react-2.png" alt="" class="img"></a>
                             <div class="info">
-                                <p class="fs-4">Proyecto-Coderhouse</p>
-                                <p class="fs-5 mt-4">Sitio Web</p>
+                                <p class="fs-4">Ecommerce</p>
+                                <p class="fs-5 mt-4">React.js (próximamente)</p>
                             </div>
                         </article>
                     </div>
@@ -140,7 +140,7 @@
             <!-- Sección de contacto-->
             <section>
                 <h3 class="titulo fs-2 mt-5">Contact</h3>
-                <form id="contact" class="container cajaFormulario bg-dark">
+                <form id="contact" class="container cajaFormulario bg-light mt-5 mb-5">
                     <div class="form-group col-md-12">
                         <label for="first_name"></label>
                         <input id="first_name" name="first_name" type="text" class="form-control"
@@ -160,14 +160,14 @@
                     <div class="col-12 m-2 mt-3">
                         <div class="form-check text-white">
                             <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
-                            <label class="form-check-label" for="invalidCheck2">
+                            <label class="form-check-label text-body" for="invalidCheck2">
                                 Estoy de acuerdo con los términos y condiciones del servicio
                             </label>
                         </div>
                     </div>
 
                     <div class="col-md-12 text-white">
-                        <label for="exampleFormControlTextarea1" class="form-label m-2">Escriba aquí su mensaje:</label>
+                        <label for="exampleFormControlTextarea1" class="form-label m-2 text-body">Escriba aquí su mensaje:</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
 
@@ -184,7 +184,7 @@
     <!-- Acá termina la sección de contenidos -->
 
     <!-- Acá empieza el pie de página -->
-    <footer id="footer" class="bg-dark">
+    <footer id="footer" class="bg-light border-top">
         <div class="container-fluid">
             <div class="column pie">
                 <a href="#" class="logoFooter">Portfolio</a>
