--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <!-- Enlaces a google font: letra "Nunito" -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,300&display=swap" rel="stylesheet">
+    <!-- Enlace a fuente de Google fonts: "Open Sans"-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <!-- Enlace a css de bootstrap local-->
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.css">
     <!-- Enlace a css local -->
@@ -39,11 +43,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto fs-4 m-1">
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link m-2 hoverMenu" href="#">Home</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
-                            <a class="nav-link m-2 hoverMenu" href="#about">About</a>
+                            <a class="nav-link m-2 hoverMenu" href="#about">About me</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link m-2 hoverMenu" href="#proyectos">Projects</a>
@@ -66,12 +70,22 @@
         <section>
             <h3 class="titulo fs-2 mt-5">About me</h3>
             <div class="container">
-                <div class="row">
-                    <div id="about" class="aboutMe">
-                        <img src="./img/FotoPerfil.png" alt="Foto de mi perfil" class="fotoPerfil border shadow">
-                        <p class="parrafoPerfil fs-4">I am a maths teacher, studying to be a full stack web developer</p>
-                    </div>
+            <div class="row acerca-de align-items-center px-4 mb-5">
+                <div class="col-12 col-lg-4 foto text-center">
+                    <img id="about" src="./img/FotoPerfil.png" class="rounded-circle mb-3 img-fluid" alt="">
+                    <p class="nombre">Nahuel Lopez</p>
                 </div>
+
+                <div class="col-12 col-lg-8 infoAcercaDe">
+                    <p class="resumen">Hi there! my name is Nahuel and I am a math teacher and frontend developer. I am studying full stack web development to change careers and dedicate myself fully to programming.</p>
+
+                    <p class="resumen">I found in web programming a window to many things that fascinate me, such as working in a team and solving challenges that put my ingenuity and creativity to the test. At this moment, I am looking to be part of a company in which I can pour all my knowledge and allow me to continue training to be a better programmer every day.</p>
+
+                    <p class="habilidades fs-4">Technical skills:</p>
+
+                    <p class="habilidades fs-5">HTML5 - CSS3 - SASS - Bootstrap - JavaScript - Git - GitHub </p>
+                </div>
+            </div>
             </div>
         </section>
         <section>
@@ -141,40 +155,37 @@
             <section>
                 <h3 class="titulo fs-2 mt-5">Contact</h3>
                 <form id="contact" class="container cajaFormulario bg-light mt-5 mb-5">
-                    <div class="form-group col-md-12">
-                        <label for="first_name"></label>
-                        <input id="first_name" name="first_name" type="text" class="form-control"
-                            placeholder=" Nombre o empresa" required>
+                    <div class="row">
+                        <div class="form-group col-md-6">
+                            <label for="first_name"></label>
+                            <input id="first_name" name="first_name" type="text" class="form-control"
+                                placeholder="Name" required>
+                        </div>
+    
+                        <div class="form-group col-md-6 mb-3">
+                            <label for="email"></label>
+                            <input id="email" type="email" class="form-control" placeholder="Email" required>
+                        </div>
                     </div>
 
-                    <div class="form-group col-md-12 mb-3">
-                        <label for="email"></label>
-                        <input id="email" type="email" class="form-control" placeholder="Email" required>
+                    <div class="col-md-12 text-white">
+                        <label for="exampleFormControlTextarea1" class="form-label m-2 text-body">Write your message here:</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
 
-                    <div class="form-group col-md-12 mb-3">
-                        <label for="tel"></label>
-                        <input id="tel" type="tel" class="form-control" placeholder="tel o cel" required>
-                    </div>
-
-                    <div class="col-12 m-2 mt-3">
+                    <!-- <div class="col-12 m-2 mt-3">
                         <div class="form-check text-white">
                             <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
                             <label class="form-check-label text-body" for="invalidCheck2">
                                 Estoy de acuerdo con los términos y condiciones del servicio
                             </label>
                         </div>
-                    </div>
-
-                    <div class="col-md-12 text-white">
-                        <label for="exampleFormControlTextarea1" class="form-label m-2 text-body">Escriba aquí su mensaje:</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                    </div>
+                    </div> -->
 
                     <div class="form-group text-center">
                         <label></label>
                         <input type="submit" class="text-white btn btn-lg btnColorUno m-3" value="Enviar">
-                        <input type="reset" class="text-white btn btn-lg btnColorDos m-3" value="Borrar">
+                        <!-- <input type="reset" class="text-white btn btn-lg btnColorDos m-3" value="Borrar"> -->
                     </div>
                 </form>
                 </div>
