Terminando el portfolio para subir al cv

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
             <div class="container">
             <div class="row acerca-de align-items-center px-4 mb-5">
                 <div class="col-12 col-lg-4 foto text-center">
-                    <img id="about" src="./img/FotoPerfil.png" class="rounded-circle mb-3 img-fluid" alt="">
+                    <img id="about" src="./img/FotoPerfil.png" class="rounded-circle mb-3 img-fotoPerfil" alt="">
                     <p class="nombre">Nahuel Lopez</p>
                 </div>
 
                 <div class="col-12 col-lg-8 infoAcercaDe">
-                    <p class="resumen">Hi there! my name is Nahuel and I am a math teacher and frontend developer. I am studying full stack web development to change careers and dedicate myself fully to programming.</p>
+                    <p class="resumen">Hi there! my name is Nahuel and I am a math teacher and frontend developer. I live in Argentina (Bs. As.), and I'm studying full stack web development to change careers and dedicate myself fully to programming.</p>
 
                     <p class="resumen">I found in web programming a window to many things that fascinate me, such as working in a team and solving challenges that put my ingenuity and creativity to the test. At this moment, I am looking to be part of a company in which I can pour all my knowledge and allow me to continue training to be a better programmer every day.</p>
 
@@ -100,7 +100,7 @@
                             <a href="https://proyecto-coderhouse-smoky.vercel.app/" target="_blank"><img
                                     src="./img/imagen-proyecto-coderhouse.jpg"
                                     alt="imagen de una chica morena con rulos, y con una laptop, sonriendo"
-                                    class="img fs-4"></a>
+                                    class="img"></a>
                             <div class="info">
                                 <p class="fs-4">Proyecto-Coderhouse</p>
                                 <p class="fs-5 mt-4">Sitio Web</p>
@@ -108,7 +108,7 @@
                         </article>
 
                         <article id="proyectoDos" class="proyecto trans">
-                            <a href="#" target="_blank"><img src="./img/portafolio.png" alt="" class="img"></a>
+                            <a href="#" target="_blank"><img src="./img/portafolio.png" alt="imagen de un portafolio de trabajos" class="img"></a>
                             <div class="info">
                                 <p class="fs-4">Portfolio</p>
                                 <p class="fs-5 mt-4">Bootstrap 5</p>
@@ -124,18 +124,18 @@
                         </article>
 
                         <article id="proyectoCuatro" class="proyecto trans">
-                            <a href="#" target="_blank"><img src="./img/imagen-proyecto-coderhouse.jpg" alt="" class="img"></a>
+                            <a href="#" target="_blank"><img src="./img/img-carritoDeCompras.jpg" alt="" class="img"></a>
                             <div class="info">
                                 <p class="fs-4">Carrito de compras</p>
-                                <p class="fs-5 mt-4">JavaScript</p>
+                                <p class="fs-5 mt-4">JavaScript (pronto)</p>
                             </div>
                         </article>
 
                         <article id="proyectoCinco" class="proyecto trans">
-                            <a href="#" target="_blank"><img src="./img/imagen-proyecto-coderhouse.jpg" alt="" class="img"></a>
+                            <a href="#" target="_blank"><img src="./img/img-toDoList.jpg" alt="" class="img"></a>
                             <div class="info">
                                 <p class="fs-4">ToDo List</p>
-                                <p class="fs-5 mt-4">JavaScript</p>
+                                <p class="fs-5 mt-4">JavaScript (pronto)</p>
                             </div>
                         </article>
 
