--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         </article>
 
                         <article id="proyectoDos" class="proyecto trans">
-                            <a href="#" target="_blank"><img src="./img/portafolio.png" alt="imagen de un portafolio de trabajos" class="img"></a>
+                            <a href="https://nahuel-devone.github.io/bootstrap-portafolio/" target="_blank"><img src="./img/portafolio.png" alt="imagen de un portafolio de trabajos" class="img"></a>
                             <div class="info">
                                 <p class="fs-4">Portfolio</p>
                                 <p class="fs-5 mt-4">Bootstrap 5</p>
