Agregando el enlace a la GitHub page de la agenda de clientes

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         </article>
 
                         <article id="proyectoTres" class="proyecto trans">
-                            <a href="#" target="_blank"><img src="./img/agenda.png" alt="" class="img"></a>
+                            <a href="https://nahuel-devone.github.io/agenda-de-clientes/" target="_blank"><img src="./img/agenda.png" alt="" class="img"></a>
                             <div class="info">
                                 <p class="fs-4">Agenda de clientes</p>
                                 <p class="fs-5 mt-4">JavaScript</p>
