Agregando el enlace al Ecommerce de React

--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
                 </div>
 
                 <div class="col-12 col-lg-8 infoAcercaDe">
-                    <p class="resumen">Hi there! my name is Nahuel and I am a math teacher and frontend developer. I live in Argentina (Bs. As.), and I'm studying full stack web development to change careers and dedicate myself fully to programming.</p>
+                    <p class="resumen">Hi there! my name is Nahuel and I am a Front-end developer and math teacher. I live in Argentina (Bs. As.), and I'm studying full stack web development to change careers and dedicate myself fully to programming.</p>
 
                     <p class="resumen">I found in web programming a window to many things that fascinate me, such as working in a team and solving challenges that put my ingenuity and creativity to the test. At this moment, I am looking to be part of a company in which I can pour all my knowledge and allow me to continue training to be a better programmer every day.</p>
 
                     <p class="habilidades fs-4">Technical skills:</p>
 
-                    <p class="habilidades fs-5">HTML5 - CSS3 - SASS - Bootstrap - JavaScript - Git - GitHub </p>
+                    <p class="habilidades fs-5">HTML5 - CSS3 - SASS - Bootstrap - Git - GitHub - JavaScript - Git - GitHub - React - Firebase - Node.js </p>
                 </div>
             </div>
             </div>
@@ -140,10 +140,10 @@
                         </article>
 
                         <article id="proyectoseis" class="proyecto trans">
-                            <a href="#" target="_blank"><img src="./img/img-react-2.png" alt="" class="img"></a>
+                            <a href="https://determined-goldberg-229a88.netlify.app/" target="_blank"><img src="./img/img-react-2.png" alt="" class="img"></a>
                             <div class="info">
                                 <p class="fs-4">Ecommerce</p>
-                                <p class="fs-5 mt-4">React.js (próximamente)</p>
+                                <p class="fs-5 mt-4">React.js</p>
                             </div>
                         </article>
                     </div>
@@ -169,7 +169,7 @@
                     </div>
 
                     <div class="col-md-12 text-white">
-                        <label for="exampleFormControlTextarea1" class="form-label m-2 text-body">Write your message here:</label>
+                        <label for="exampleFormControlTextarea1" class="form-label m-2 text-body fs-5">Write your message here:</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
 
