Mejorando los estilos

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="logo">
                         <!-- <img class="imgReact rodar" src="./img/react-personalizado.svg" alt="imagen del símbolo de react"> -->
                         <span class="gear rodar">S</span>
-                        <a href="#">Portfolio</a>
+                        <a href="#" id="portfolio">Portfolio</a>
                         <span class="justBeNice desplazamiento">#</span>
                     </div>
                 </div>
