Agregando el proyecto del ahorcado

--- a/index.html
+++ b/index.html
@@ -135,10 +135,20 @@
 
                         <article class="proyecto trans">
                             <a href="https://nahuel-devone.github.io/encriptador/" target="_blank">
-                                <img src="./img/encriptador-img.png" alt="" class="img">
+                                <img src="./img/encriptador-img.png" alt="imagen de la aplicación del encriptador" class="img">
                             </a>
                             <div class="info">
                                 <p class="fs-4">Encriptador</p>
+                                <p class="fs-5 mt-4">JavaScript</p>
+                            </div>
+                        </article>
+
+                        <article class="proyecto trans">
+                            <a href="https://nahuel-devone.github.io/ahorcado-js/" target="_blank">
+                                <img src="./img/rope.png" alt="imagen de la aplicación del encriptador" class="img">
+                            </a>
+                            <div class="info">
+                                <p class="fs-4">Ahorcado</p>
                                 <p class="fs-5 mt-4">JavaScript</p>
                             </div>
                         </article>
