organizando y comentando código

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
             <div class="container-fluid">
                 <div class="column">
                     <div class="logo">
-                        <!-- <img class="imgReact rodar" src="./img/react-personalizado.svg" alt="imagen del símbolo de react"> -->
                         <span class="gear rodar">S</span>
                         <a href="#" id="portfolio">Portfolio</a>
                         <span class="justBeNice desplazamiento">#</span>
@@ -227,8 +226,8 @@
 
                     <div class="form-group text-center">
                         <label></label>
-                        <input type="submit" class="text-white btn btn-lg btnColorUno m-3" value="Enviar">
-                        <!-- <input type="reset" class="text-white btn btn-lg btnColorDos m-3" value="Borrar"> -->
+                        <input type="submit" class="text-white btn btn-lg btnColorUno m-3" value="Send">
+                        <!-- <input type="reset" class="text-white btn btn-lg btnColorDos m-3" value="Delete"> -->
                     </div>
                 </form>
                 </div>
