mejorando los estilos

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h1 class="bg-light text-body text-center mt-5 mb-5 p-4">"If you can dream it, I can do it"</h1>
         <!-- Sección acerca de mí -->
         <section>
-            <h3 class="titulo fs-2 mt-5">About me</h3>
+            <h2 class="titulo fs-2 mt-5">About me</h2>
             <div class="container">
                 <div class="row acerca-de align-items-center px-4 mb-5">
                     <div class="col-12 col-lg-4 foto text-center">
@@ -94,144 +94,132 @@
             </div>
         </section>
         <section>
-            <!-- Fin de la sección acerca de mí -->
+        <!-- Fin de la sección acerca de mí -->
 
-            <!-- Sección sobre los proyectos -->
-            <section>
-                <h3 class="titulo fs-2">Projects</h3>
-                <div class="container">
-                    <div id="proyectos" class="mt-4">
-                        <article id="proyectoCoderhouse" class="proyecto trans">
-                            <a href="https://proyecto-coderhouse-smoky.vercel.app/" target="_blank">
-                                <img src="./img/imagen-proyecto-coderhouse.jpg"
-                                    alt="imagen de una chica morena con rulos, y con una laptop, sonriendo" class="img">
-                            </a>
-                            <div class="info">
-                                <p class="fs-4">Proyecto-Coderhouse</p>
-                                <p class="fs-5 mt-4">Sitio Web</p>
-                            </div>
-                        </article>
+        <!-- Sección sobre los proyectos -->
+        <section>
+            <h2 class="titulo fs-2">Projects</h2>
+            <div class="container">
+                <div id="proyectos" class="mt-4">
+                    <article id="proyectoCoderhouse" class="proyecto trans">
+                        <a href="https://proyecto-coderhouse-smoky.vercel.app/" target="_blank">
+                            <img src="./img/imagen-proyecto-coderhouse.jpg"
+                                alt="imagen de una chica morena con rulos, y con una laptop, sonriendo" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4">Proyecto-Coderhouse</p>
+                            <p class="fs-5 mt-4">Sitio Web</p>
+                        </div>
+                    </article>
+                    <article class="proyecto trans">
+                        <a href="https://nahuel-devone.github.io/bootstrap-portafolio/" target="_blank">
+                            <img src="./img/portafolio.png" alt="imagen de un portafolio de trabajos" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4">Portfolio</p>
+                            <p class="fs-5 mt-4">Bootstrap 5</p>
+                        </div>
+                    </article>
+                    <article class="proyecto trans">
+                        <a href="https://nahuel-devone.github.io/agenda-de-clientes/" target="_blank">
+                            <img src="./img/agenda.png" alt="" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4">Agenda de clientes</p>
+                            <p class="fs-5 mt-4">JavaScript</p>
+                        </div>
+                    </article>
+                    <article class="proyecto trans">
+                        <a href="https://nahuel-devone.github.io/encriptador/" target="_blank">
+                            <img src="./img/encriptador-img.png" alt="imagen de la aplicación del encriptador"
+                                class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4">Encriptador</p>
+                            <p class="fs-5 mt-4">JavaScript</p>
+                        </div>
+                    </article>
+                    <article class="proyecto trans">
+                        <a href="https://nahuel-devone.github.io/ahorcado-js/" target="_blank">
+                            <img src="./img/rope.png" alt="imagen de la aplicación del encriptador" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4">Ahorcado</p>
+                            <p class="fs-5 mt-4">JavaScript</p>
+                        </div>
+                    </article>
+                    <article class="proyecto trans">
+                        <a href="https://determined-goldberg-229a88.netlify.app/" target="_blank">
+                            <img src="./img/img-react-2.png" alt="" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4">Ecommerce</p>
+                            <p class="fs-5 mt-4">React.js</p>
+                        </div>
+                    </article>
+                    <article class="proyecto trans">
+                        <a href="#" target="_blank">
+                            <img src="./img/img-carritoDeCompras.jpg" alt="" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4">Carrito de compras</p>
+                            <p class="fs-5 mt-4">JavaScript (pronto)</p>
+                        </div>
+                    </article>
+                    <!-- <article class="proyecto trans">
+                        <a href="#" target="_blank"><img src="./img/img-toDoList.jpg" alt="" class="img"></a>
+                        <div class="info">
+                            <p class="fs-4">ToDo List</p>
+                            <p class="fs-5 mt-4">JavaScript (pronto)</p>
+                        </div>
+                    </article> -->
+                    <!-- <article class="proyecto trans">
+                        <a href="#" target="_blank"><img src="./img/img-toDoList.jpg" alt="" class="img"></a>
+                        <div class="info">
+                            <p class="fs-4">ToDo List</p>
+                            <p class="fs-5 mt-4">JavaScript (pronto)</p>
+                        </div>
+                    </article> -->
+                </div>
+            </div>
+        </section>
+        <!-- Fin de la sección acerca de los proyectos -->
 
-                        <article class="proyecto trans">
-                            <a href="https://nahuel-devone.github.io/bootstrap-portafolio/" target="_blank">
-                                <img src="./img/portafolio.png" alt="imagen de un portafolio de trabajos" class="img">
-                            </a>
-                            <div class="info">
-                                <p class="fs-4">Portfolio</p>
-                                <p class="fs-5 mt-4">Bootstrap 5</p>
-                            </div>
-                        </article>
-
-                        <article class="proyecto trans">
-                            <a href="https://nahuel-devone.github.io/agenda-de-clientes/" target="_blank">
-                                <img src="./img/agenda.png" alt="" class="img">
-                            </a>
-                            <div class="info">
-                                <p class="fs-4">Agenda de clientes</p>
-                                <p class="fs-5 mt-4">JavaScript</p>
-                            </div>
-                        </article>
-
-                        <article class="proyecto trans">
-                            <a href="https://nahuel-devone.github.io/encriptador/" target="_blank">
-                                <img src="./img/encriptador-img.png" alt="imagen de la aplicación del encriptador" class="img">
-                            </a>
-                            <div class="info">
-                                <p class="fs-4">Encriptador</p>
-                                <p class="fs-5 mt-4">JavaScript</p>
-                            </div>
-                        </article>
-
-                        <article class="proyecto trans">
-                            <a href="https://nahuel-devone.github.io/ahorcado-js/" target="_blank">
-                                <img src="./img/rope.png" alt="imagen de la aplicación del encriptador" class="img">
-                            </a>
-                            <div class="info">
-                                <p class="fs-4">Ahorcado</p>
-                                <p class="fs-5 mt-4">JavaScript</p>
-                            </div>
-                        </article>
-
-                        <article class="proyecto trans">
-                            <a href="https://determined-goldberg-229a88.netlify.app/" target="_blank">
-                                <img src="./img/img-react-2.png" alt="" class="img">
-                            </a>
-                            <div class="info">
-                                <p class="fs-4">Ecommerce</p>
-                                <p class="fs-5 mt-4">React.js</p>
-                            </div>
-                        </article>
-
-                        <article class="proyecto trans">
-                            <a href="#" target="_blank">
-                                <img src="./img/img-carritoDeCompras.jpg" alt="" class="img">
-                            </a>
-                            <div class="info">
-                                <p class="fs-4">Carrito de compras</p>
-                                <p class="fs-5 mt-4">JavaScript (pronto)</p>
-                            </div>
-                        </article>
-
-                        <!-- <article class="proyecto trans">
-                            <a href="#" target="_blank"><img src="./img/img-toDoList.jpg" alt="" class="img"></a>
-                            <div class="info">
-                                <p class="fs-4">ToDo List</p>
-                                <p class="fs-5 mt-4">JavaScript (pronto)</p>
-                            </div>
-                        </article> -->
-
-                        <!-- <article class="proyecto trans">
-                            <a href="#" target="_blank"><img src="./img/img-toDoList.jpg" alt="" class="img"></a>
-                            <div class="info">
-                                <p class="fs-4">ToDo List</p>
-                                <p class="fs-5 mt-4">JavaScript (pronto)</p>
-                            </div>
-                        </article> -->
+        <!-- Sección de contacto-->
+        <section>
+            <h2 class="titulo fs-2 mt-5">Contact</h2>
+            <form id="contact" class="container cajaFormulario bg-light mt-5 mb-5">
+                <div class="row">
+                    <div class="form-group col-md-6">
+                        <label for="first_name"></label>
+                        <input id="first_name" name="first_name" type="text" class="form-control" placeholder="Name"
+                            required>
+                    </div>
+                    <div class="form-group col-md-6 mb-3">
+                        <label for="email"></label>
+                        <input id="email" type="email" class="form-control" placeholder="Email" required>
                     </div>
                 </div>
-            </section>
-            <!-- Fin de la sección acerca de los proyectos -->
-
-            <!-- Sección de contacto-->
-            <section>
-                <h3 class="titulo fs-2 mt-5">Contact</h3>
-                <form id="contact" class="container cajaFormulario bg-light mt-5 mb-5">
-                    <div class="row">
-                        <div class="form-group col-md-6">
-                            <label for="first_name"></label>
-                            <input id="first_name" name="first_name" type="text" class="form-control" placeholder="Name"
-                                required>
-                        </div>
-
-                        <div class="form-group col-md-6 mb-3">
-                            <label for="email"></label>
-                            <input id="email" type="email" class="form-control" placeholder="Email" required>
-                        </div>
-                    </div>
-
-                    <div class="col-md-12 text-white">
-                        <label for="exampleFormControlTextarea1" class="form-label m-2 text-body fs-5">Write your
-                            message here:</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                    </div>
-
-                    <!-- <div class="col-12 m-2 mt-3">
-                        <div class="form-check text-white">
-                            <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
-                            <label class="form-check-label text-body" for="invalidCheck2">
-                                Estoy de acuerdo con los términos y condiciones del servicio
-                            </label>
-                        </div>
-                    </div> -->
-
-                    <div class="form-group text-center">
-                        <label></label>
-                        <input type="submit" class="text-white btn btn-lg btnColorUno m-3" value="Send">
-                        <!-- <input type="reset" class="text-white btn btn-lg btnColorDos m-3" value="Delete"> -->
-                    </div>
-                </form>
+                <div class="col-md-12 text-white">
+                    <label for="exampleFormControlTextarea1" class="form-label m-2 text-body fs-5">Write your
+                        message here:</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
-            </section>
+                <!-- <div class="col-12 m-2 mt-3">
+                    <div class="form-check text-white">
+                        <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+                        <label class="form-check-label text-body" for="invalidCheck2">
+                            Estoy de acuerdo con los términos y condiciones del servicio
+                        </label>
+                    </div>
+                </div> -->
+                <div class="form-group text-center">
+                    <label></label>
+                    <input type="submit" class="text-white btn btn-lg btnColorUno m-3" value="Send">
+                    <!-- <input type="reset" class="text-white btn btn-lg btnColorDos m-3" value="Delete"> -->
+                </div>
+            </form>
+        </section>
     </main>
     <!-- Fin de la sección de contacto -->
     <!-- Acá termina la sección de contenidos -->
@@ -246,7 +234,7 @@
                 <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-2"><img
                         src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="icono"></a>
             </div>
-            <div class="info mb-5">Nahuel-DevOne &copy; 2021</div>
+            <div class="info fs-4 mb-5">Nahuel-DevOne &copy; 2021</div>
         </div>
     </footer>
     <!-- Acá termina el pie de página -->
