Trabajando en los estilos

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto fs-4 m-1">
+                    <ul class="navbar-nav ms-auto fs-3 m-1 me-5">
                         <!-- <li class="nav-item">
                             <a class="nav-link m-2 hoverMenu" href="#">Home</a>
                         </li> -->
@@ -64,18 +64,19 @@
 
     <!-- Acá empieza el contenido principal -->
     <main>
-        <h1 class="bg-light text-body text-center mt-5 mb-5 p-4">"If you can dream it, I can do it"</h1>
+        <h1 class="display-2 text-body text-center">"If you can dream it, I can do it"</h1>
         <!-- Sección acerca de mí -->
         <section>
-            <h2 class="titulo fs-2 mt-5">About me</h2>
+            <h2 class="titulo fs-1 mt-4">About me</h2>
             <div class="container">
                 <div class="row acerca-de align-items-center px-4 mb-5">
-                    <div class="col-12 col-lg-4 foto text-center">
+                    <div class="col-12 col-lg-5 foto text-center">
                         <img id="about" src="./img/FotoPerfil.png" class="rounded-circle mb-3 img-fotoPerfil" alt="">
                         <p class="nombre">Nahuel Lopez</p>
+                        <p class="nombre">Front-end Developer</p>
                     </div>
 
-                    <div class="col-12 col-lg-8 infoAcercaDe">
+                    <div class="col-12 col-lg-7 infoAcercaDe">
                         <p class="resumen">Hi there! my name is Nahuel and I am a Front-end developer and math teacher.
                             I live in Argentina (Bs. As.), and I'm studying full stack web development to change careers
                             and dedicate myself fully to programming.</p>
@@ -98,7 +99,7 @@
 
         <!-- Sección sobre los proyectos -->
         <section>
-            <h2 class="titulo fs-2">Projects</h2>
+            <h2 class="titulo fs-1">Projects</h2>
             <div class="container">
                 <div id="proyectos" class="mt-4">
                     <article id="proyectoCoderhouse" class="proyecto trans">
@@ -187,7 +188,7 @@
 
         <!-- Sección de contacto-->
         <section>
-            <h2 class="titulo fs-2 mt-5">Contact</h2>
+            <h2 class="titulo fs-1 mt-5">Contact</h2>
             <form id="contact" class="container cajaFormulario bg-light mt-5 mb-5">
                 <div class="row">
                     <div class="form-group col-md-6">
