mejorando los estilos

--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 
                         <p class="habilidades fs-4">Technical skills:</p>
 
-                        <p class="habilidades fs-5">HTML5 - CSS3 - SASS - Bootstrap - Git - GitHub - JavaScript - Git -
-                            GitHub - React - Firebase - Node.js </p>
+                        <p class="habilidades fs-5">HTML5 - CSS3 - SASS - Bootstrap - Git - GitHub - JavaScript - React - Firebase - Node.js</p>
                     </div>
                 </div>
             </div>
@@ -159,6 +158,13 @@
                         </div>
                     </article>
                     <article class="proyecto trans">
+                        <a href="#" target="_blank"><img src="img/img-appPacientes.png" alt="" class="img"></a>
+                        <div class="info">
+                            <p class="fs-4">App de pacientes</p>
+                            <p class="fs-5 mt-4">Programa ONE (pronto)</p>
+                        </div>
+                    </article>
+                    <article class="proyecto trans">
                         <a href="#" target="_blank">
                             <img src="./img/img-carritoDeCompras.jpg" alt="" class="img">
                         </a>
@@ -167,13 +173,6 @@
                             <p class="fs-5 mt-4">JavaScript (pronto)</p>
                         </div>
                     </article>
-                    <!-- <article class="proyecto trans">
-                        <a href="#" target="_blank"><img src="./img/img-toDoList.jpg" alt="" class="img"></a>
-                        <div class="info">
-                            <p class="fs-4">ToDo List</p>
-                            <p class="fs-5 mt-4">JavaScript (pronto)</p>
-                        </div>
-                    </article> -->
                     <!-- <article class="proyecto trans">
                         <a href="#" target="_blank"><img src="./img/img-toDoList.jpg" alt="" class="img"></a>
                         <div class="info">
