mejorando los estilos

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <!-- Acá empieza el contenido principal -->
     <main>
-        <h1 class="display-2 text-body text-center">"If you can dream it, I can do it"</h1>
+        <h1 class="display-2 text-dark text-center">"If you can dream it, I can do it"</h1>
         <!-- Sección acerca de mí -->
         <section>
             <h2 class="titulo fs-1 mt-4">About me</h2>
@@ -108,7 +108,7 @@
                         </a>
                         <div class="info">
                             <p class="fs-4">Proyecto-Coderhouse</p>
-                            <p class="fs-5 mt-4">Sitio Web</p>
+                            <p class="fs-5 mt-4 opacidad">Sitio Web</p>
                         </div>
                     </article>
                     <article class="proyecto trans">
@@ -216,7 +216,7 @@
                 <div class="form-group text-center">
                     <label></label>
                     <input type="submit" class="text-white btn btn-lg btnColorUno m-3" value="Send">
-                    <!-- <input type="reset" class="text-white btn btn-lg btnColorDos m-3" value="Delete"> -->
+                    <input type="reset" class="text-white btn btn-lg btnColorDos m-3" value="Delete">
                 </div>
             </form>
         </section>
