--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Acá empieza la cabecera -->
     <header>
         <!-- Acá empieza el nav -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fs-5 border-bottom">
+        <nav id="nav" class="navbar navbar-expand-lg navbar-light fs-5 border-bottom">
             <div class="container-fluid">
                 <div class="column">
                     <div class="logo">
@@ -64,13 +64,13 @@
 
     <!-- Acá empieza el contenido principal -->
     <main>
-        <h1 class="display-2 text-dark text-center">"If you can dream it, I can do it"</h1>
+        <h1 class="display-2">"If you can dream it, I can do it"</h1>
         <!-- Sección acerca de mí -->
         <section>
             <h2 class="titulo fs-1 mt-4">About me</h2>
             <div class="container">
-                <div class="row acerca-de align-items-center px-4 mb-5">
-                    <div class="col-12 col-lg-5 foto text-center">
+                <div class="row acercaDe align-items-center px-4 mb-4">
+                    <div class="col-12 col-lg-5 foto text-center mb-2">
                         <img id="about" src="./img/FotoPerfil.png" class="rounded-circle mb-3 img-fotoPerfil" alt="">
                         <p class="nombre">Nahuel Lopez</p>
                         <p class="nombre">Front-end Developer</p>
@@ -225,7 +225,7 @@
     <!-- Acá termina la sección de contenidos -->
 
     <!-- Acá empieza el pie de página -->
-    <footer id="footer" class="bg-light border-top">
+    <footer id="footer" class="border-top">
         <div class="container-fluid">
             <div class="column pie">
                 <a href="#" class="logoFooter">Portfolio</a>
