ordenando y mejorando los estilos

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="container">
                 <div class="row acercaDe align-items-center px-4 mb-4">
                     <div class="col-12 col-lg-5 foto text-center mb-2">
-                        <img id="about" src="./img/FotoPerfil.png" class="rounded-circle mb-3 img-fotoPerfil" alt="">
+                        <img id="about" src="./img/FotoPerfil.png" class="rounded-circle mb-3 imgFotoPerfil" alt="">
                         <p class="nombre">Nahuel Lopez</p>
                         <p class="nombre">Front-end Developer</p>
                     </div>
@@ -188,22 +188,23 @@
         <!-- Sección de contacto-->
         <section>
             <h2 class="titulo fs-1 mt-5">Contact</h2>
+            <h3 class="text-center text-dark">My email: nahuel.developer1@gmail.com</h3>
             <form id="contact" class="container cajaFormulario bg-light mt-5 mb-5">
                 <div class="row">
                     <div class="form-group col-md-6">
                         <label for="first_name"></label>
-                        <input id="first_name" name="first_name" type="text" class="form-control" placeholder="Name"
+                        <input id="first_name" name="first_name" type="text" class="form-control" placeholder="Your name"
                             required>
                     </div>
                     <div class="form-group col-md-6 mb-3">
                         <label for="email"></label>
-                        <input id="email" type="email" class="form-control" placeholder="Email" required>
+                        <input id="email" type="email" class="form-control" placeholder="Your email" required>
                     </div>
                 </div>
                 <div class="col-md-12 text-white">
                     <label for="exampleFormControlTextarea1" class="form-label m-2 text-body fs-5">Write your
                         message here:</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
                 </div>
                 <!-- <div class="col-12 m-2 mt-3">
                     <div class="form-check text-white">
